--- a/Copy_of_HMW01.ipynb
+++ b/Copy_of_HMW01.ipynb
@@ -167,7 +167,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "id": "b07c004b-6141-47c7-8f5e-35b61dfe004d",
       "metadata": {
         "id": "b07c004b-6141-47c7-8f5e-35b61dfe004d"
@@ -192,7 +192,7 @@
         "id": "7d59e118-f457-442f-b292-55c3d7c9182f"
       },
       "source": [
-        "### Look up some examples of GridWorld! List at least three links or references to different GridWorlds you could find online"
+        "### 2.1 Look up some examples of GridWorld! List at least three links or references to different GridWorlds you could find online"
       ]
     },
     {
@@ -202,18 +202,348 @@
         "id": "92501b50-6553-4b73-bbf5-9646816d79ce"
       },
       "source": [
-        "1- https://cs.stanford.edu/people/karpathy/reinforcejs/gridworld_dp.html\n"
+        "1.   https://cs.stanford.edu/people/karpathy/reinforcejs/gridworld_dp.html\n",
+        "2.   https://taigame.org/game/gridworld\n",
+        "3. https://strategywiki.org/wiki/Photon:_The_Ultimate_Game_on_Planet_Earth/Walkthrough\n",
+        "\n"
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 2.2 Implementing the MDP"
+      ],
+      "metadata": {
+        "id": "m1i1r8ejZsTJ"
+      },
+      "id": "m1i1r8ejZsTJ"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " Implement a GridWorld Class"
+      ],
+      "metadata": {
+        "id": "vauO3nVPa5Dr"
+      },
+      "id": "vauO3nVPa5Dr"
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "class GridWorld:\n",
+        "    def __init__(self, size, rewards, discount_factor):\n",
+        "        self.size = size\n",
+        "        self.rewards = rewards\n",
+        "        self.discount_factor = discount_factor\n",
+        "        \n",
+        "        self.num_states = size[0] * size[1]\n",
+        "        self.num_actions = 4 # up, down, left, right\n",
+        "        \n",
+        "        # create transition probability matrix\n",
+        "        self.transition_probs = np.zeros((self.num_states, self.num_actions, self.num_states))\n",
+        "        for s in range(self.num_states):\n",
+        "            for a in range(self.num_actions):\n",
+        "                next_s = self._get_next_state(s, a)\n",
+        "                self.transition_probs[s, a, next_s] = 1\n",
+        "        \n",
+        "    def _get_next_state(self, state, action):\n",
+        "        x, y = state // self.size[1], state % self.size[1]\n",
+        "        if action == 0: # up\n",
+        "            x = max(x-1, 0)\n",
+        "        elif action == 1: # down\n",
+        "            x = min(x+1, self.size[0]-1)\n",
+        "        elif action == 2: # left\n",
+        "            y = max(y-1, 0)\n",
+        "        elif action == 3: # right\n",
+        "            y = min(y+1, self.size[1]-1)\n",
+        "        return x * self.size[1] + y\n",
+        "        \n",
+        "    def get_transition_probs(self):\n",
+        "        return self.transition_probs\n",
+        "    \n",
+        "    def get_rewards(self):\n",
+        "        return self.rewards\n",
+        "    \n",
+        "    def get_discount_factor(self):\n",
+        "        return self.discount_factor\n",
+        "    \n",
+        "    def get_num_states(self):\n",
+        "        return self.num_states\n",
+        "    \n",
+        "    def get_num_actions(self):\n",
+        "        return self.num_actions\n"
+      ],
+      "metadata": {
+        "id": "SXjZJm3UaxLv"
+      },
+      "id": "SXjZJm3UaxLv",
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In this example, a simple 3x3 Gridworld MDP, the transition probabilities are ***deterministic***. This means that taking an action in a particular state always results in the same next state. For example, if the agent is in state 1 and takes the \"right\" action, it will transition to state 2 with probability 1. Therefore, this MDP is ***deterministic***."
+      ],
+      "metadata": {
+        "id": "niExcW5LbXlB"
+      },
+      "id": "niExcW5LbXlB"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 39,
       "id": "4653d6e1-96f7-4073-84e4-eb7c5861133e",
       "metadata": {
         "id": "4653d6e1-96f7-4073-84e4-eb7c5861133e"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "class GridWorld:\n",
+        "    def __init__(self, size, rewards, discount_factor, walls=[], traps=[]):\n",
+        "        self.size = size\n",
+        "        self.rewards = rewards\n",
+        "        self.discount_factor = discount_factor\n",
+        "        self.walls = walls\n",
+        "        self.traps = traps\n",
+        "        \n",
+        "        self.num_states = size[0] * size[1]\n",
+        "        self.num_actions = 4 # up, down, left, right\n",
+        "        \n",
+        "        # create transition probability matrix\n",
+        "        self.transition_probs = np.zeros((self.num_states, self.num_actions, self.num_states))\n",
+        "        for s in range(self.num_states):\n",
+        "            for a in range(self.num_actions):\n",
+        "                next_s = self._get_next_state(s, a)\n",
+        "                self.transition_probs[s, a, next_s] = 1\n",
+        "        \n",
+        "    def _get_next_state(self, state, action):\n",
+        "        x, y = state // self.size[1], state % self.size[1]\n",
+        "        if action == 0: # up\n",
+        "            if x > 0 and (x-1, y) not in self.walls:\n",
+        "                x = x - 1\n",
+        "        elif action == 1: # down\n",
+        "            if x < self.size[0]-1 and (x+1, y) not in self.walls:\n",
+        "                x = x + 1\n",
+        "        elif action == 2: # left\n",
+        "            if y > 0 and (x, y-1) not in self.walls:\n",
+        "                y = y - 1\n",
+        "        elif action == 3: # right\n",
+        "            if y < self.size[1]-1 and (x, y+1) not in self.walls:\n",
+        "                y = y + 1\n",
+        "                \n",
+        "        next_state = x * self.size[1] + y\n",
+        "        \n",
+        "        # check for traps\n",
+        "        if next_state in self.traps:\n",
+        "            return 0 # reset to initial state\n",
+        "        else:\n",
+        "            return next_state\n",
+        "        \n",
+        "    def get_transition_probs(self):\n",
+        "        return self.transition_probs\n",
+        "    \n",
+        "    def get_rewards(self):\n",
+        "        return self.rewards\n",
+        "    \n",
+        "    def get_discount_factor(self):\n",
+        "        return self.discount_factor\n",
+        "    \n",
+        "    def get_num_states(self):\n",
+        "        return self.num_states\n",
+        "    \n",
+        "    def get_num_actions(self):\n",
+        "        return self.num_actions\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 3  Implementing a policy "
+      ],
+      "metadata": {
+        "id": "1oRE0Ev2ewT6"
+      },
+      "id": "1oRE0Ev2ewT6"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 3.1 Implement the basic agent\n"
+      ],
+      "metadata": {
+        "id": "Ym4i1NNte3qs"
+      },
+      "id": "Ym4i1NNte3qs"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "class StochasticAgent:    # \n",
+        "    def __init__(self, env, stochasticity=0.2):\n",
+        "        self.env = env\n",
+        "        self.stochasticity = stochasticity\n",
+        "    \n",
+        "    def act(self, state):\n",
+        "        \"\"\"\n",
+        "        Given the current state, return an action according to a stochastic policy\n",
+        "        with non-zero probability for every action at every state.\n",
+        "        \"\"\"\n",
+        "        action_probs = np.ones(self.env.get_num_actions()) * self.stochasticity / (self.env.get_num_actions() - 1)\n",
+        "        action_probs[self.env.get_num_actions()//2] = 1 - self.stochasticity # set the probability of the action that corresponds to staying in place to 1 - stochasticity\n",
+        "        \n",
+        "        action = np.random.choice(self.env.get_num_actions(), p=action_probs)\n",
+        "        return action\n"
+      ],
+      "metadata": {
+        "id": "-Fkw4exlfLLM"
+      },
+      "id": "-Fkw4exlfLLM",
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 3.2  Evaluate the policy "
+      ],
+      "metadata": {
+        "id": "66OPqA1VfudJ"
+      },
+      "id": "66OPqA1VfudJ"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install gridworld\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1t3mXwPUjXsm",
+        "outputId": "346e0a7c-fce6-4474-b144-20d1c693e2f6"
+      },
+      "id": "1t3mXwPUjXsm",
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Requirement already satisfied: gridworld in /usr/local/lib/python3.9/dist-packages (0.1)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.9/dist-packages (from gridworld) (1.22.4)\n",
+            "Requirement already satisfied: arcade in /usr/local/lib/python3.9/dist-packages (from gridworld) (2.6.17)\n",
+            "Requirement already satisfied: pillow~=9.3.0 in /usr/local/lib/python3.9/dist-packages (from arcade->gridworld) (9.3.0)\n",
+            "Requirement already satisfied: pyglet==2.0.dev23 in /usr/local/lib/python3.9/dist-packages (from arcade->gridworld) (2.0.dev23)\n",
+            "Requirement already satisfied: pytiled-parser==2.2.0 in /usr/local/lib/python3.9/dist-packages (from arcade->gridworld) (2.2.0)\n",
+            "Requirement already satisfied: pymunk~=6.4.0 in /usr/local/lib/python3.9/dist-packages (from arcade->gridworld) (6.4.0)\n",
+            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.9/dist-packages (from pytiled-parser==2.2.0->arcade->gridworld) (4.5.0)\n",
+            "Requirement already satisfied: attrs>=18.2.0 in /usr/local/lib/python3.9/dist-packages (from pytiled-parser==2.2.0->arcade->gridworld) (23.1.0)\n",
+            "Requirement already satisfied: cffi>=1.15.0 in /usr/local/lib/python3.9/dist-packages (from pymunk~=6.4.0->arcade->gridworld) (1.15.1)\n",
+            "Requirement already satisfied: pycparser in /usr/local/lib/python3.9/dist-packages (from cffi>=1.15.0->pymunk~=6.4.0->arcade->gridworld) (2.21)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sys\n",
+        "print(sys.path)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oSITqjHoj5le",
+        "outputId": "aac9c666-9324-48a3-8c23-42d89c8e0e61"
+      },
+      "id": "oSITqjHoj5le",
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['/content', '/env/python', '/usr/lib/python39.zip', '/usr/lib/python3.9', '/usr/lib/python3.9/lib-dynload', '', '/usr/local/lib/python3.9/dist-packages', '/usr/lib/python3/dist-packages', '/usr/local/lib/python3.9/dist-packages/IPython/extensions', '/root/.ipython', '/path/to/gridworld']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sys\n",
+        "sys.path.append(\"/path/to/gridworld\")"
+      ],
+      "metadata": {
+        "id": "BOGiY7gWj9ew"
+      },
+      "id": "BOGiY7gWj9ew",
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "from gridworld import GridWorld\n",
+        "from agent import StochasticAgent\n",
+        "\n",
+        "# create the GridWorld and agent\n",
+        "gw_size = (5, 5)\n",
+        "gw_rewards = np.zeros(gw_size)\n",
+        "gw_rewards[gw_size[0]-1, gw_size[1]-1] = 1 # reward at goal state\n",
+        "gw_discount = 0.99\n",
+        "gw = GridWorld(gw_size, gw_rewards, gw_discount)\n",
+        "agent = StochasticAgent(gw.get_num_actions(), gw.get_num_states())\n",
+        "\n",
+        "# collect episodes\n",
+        "num_episodes = 1000\n",
+        "state_values = np.zeros(gw.get_num_states()) # state value function V(s)\n",
+        "state_counts = np.zeros(gw.get_num_states()) # state visitation counts\n",
+        "for i in range(num_episodes):\n",
+        "    # initialize episode\n",
+        "    state = np.random.randint(gw.get_num_states())\n",
+        "    episode = []\n",
+        "    done = False\n",
+        "    while not done:\n",
+        "        # take action according to the agent's policy\n",
+        "        action = agent.act(state)\n",
+        "        next_state, reward = gw.step(state, action)\n",
+        "        episode.append((state, action, reward))\n",
+        "        state = next_state\n",
+        "        done = (reward == 1) # reached goal state\n",
+        "    # update state value function\n",
+        "    returns = 0\n",
+        "    for j in range(len(episode)-1, -1, -1): # iterate over episode backwards\n",
+        "        state, action, reward = episode[j]\n",
+        "        returns = gw.get_discount_factor() * returns + reward\n",
+        "        if state_counts[state] == 0: # first visit to the state\n",
+        "            state_values[state] = returns\n",
+        "        else: # incremental update\n",
+        "            state_values[state] = (state_values[state] * state_counts[state] + returns) / (state_counts[state] + 1)\n",
+        "        state_counts[state] += 1\n",
+        "\n",
+        "# print state values\n",
+        "print(\"State values:\")\n",
+        "print(np.reshape(state_values, gw_size))\n"
+      ],
+      "metadata": {
+        "id": "Wp691MNZjGlH"
+      },
+      "id": "Wp691MNZjGlH",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
